force-app/main/default/objects/Curb_Job__c/Curb_Job__c.object-meta.xml
<CustomObject>
    <description>This form is for estimating concrete curb all the way through construction and billing</description>
    <label>Curb Job</label>
    <nameField>
        <label>Curb Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Curb Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>