force-app/main/default/objects/Curb_Job__c/fields/ADA_Driveway_Ramps_moblztn_1__c.field-meta.xml
<CustomField>
    <fullName>ADA_Driveway_Ramps_moblztn_1__c</fullName>
    <label># ADA/Driveway Ramps (moblztn #1)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>