force-app/main/default/objects/Curb_Job__c/fields/Are_there_catch_basins_to_adjust__c.field-meta.xml
<CustomField>
    <fullName>Are_there_catch_basins_to_adjust__c</fullName>
    <label>Are there catch basins to adjust?</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>