force-app/main/default/objects/Curb_Job__c/fields/Difficulty_Factor_moblztn_1__c.field-meta.xml
<CustomField>
    <fullName>Difficulty_Factor_moblztn_1__c</fullName>
    <label>Difficulty Factor (moblztn #1)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>