force-app/main/default/objects/Curb_Job__c/fields/Do_we_need_staging_area_and_is_there_one__c.field-meta.xml
<CustomField>
    <fullName>Do_we_need_staging_area_and_is_there_one__c</fullName>
    <label>Do we need staging area and is there one</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>