force-app/main/default/objects/Curb_Job__c/fields/Flatwork_Bollards_Misc__c.field-meta.xml
<CustomField>
    <fullName>Flatwork_Bollards_Misc__c</fullName>
    <label>Flatwork, Bollards, Misc (moblztn #1)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>