force-app/main/default/objects/Curb_Job__c/fields/How_many_feet_moblztn_1__c.field-meta.xml
<CustomField>
    <fullName>How_many_feet_moblztn_1__c</fullName>
    <label>How many feet (moblztn #1)?</label>
    <precision>11</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>