force-app/main/default/objects/Curb_Job__c/fields/How_will_Rain_effect_the_forms_or_job__c.field-meta.xml
<CustomField>
    <fullName>How_will_Rain_effect_the_forms_or_job__c</fullName>
    <label>How will Rain effect the forms or job?</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>