force-app/main/default/objects/Curb_Job__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <label>Job</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Curb Jobs</relationshipLabel>
    <relationshipName>Curb_Jobs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>