force-app/main/default/objects/Curb_Job__c/fields/Out_of_the_Ordinary_Curb_Details__c.field-meta.xml
<CustomField>
    <fullName>Out_of_the_Ordinary_Curb_Details__c</fullName>
    <label>Out of the Ordinary Curb Details?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>