force-app/main/default/objects/Curb_Job__c/fields/Pedestrian_Vehicle_Traffic_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Pedestrian_Vehicle_Traffic_Concerns__c</fullName>
    <label>Pedestrian/Vehicle Traffic Concerns:</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>