force-app/main/default/objects/Curb_Job__c/fields/Public_Works_or_Private__c.field-meta.xml
<CustomField>
    <fullName>Public_Works_or_Private__c</fullName>
    <label>Public Works or Private?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
                <default>true</default>
                <label>Private</label>
            </value>
            <value>
                <fullName>Public Works</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>