force-app/main/default/objects/Curb_Job__c/fields/Special_Machinery_Needed__c.field-meta.xml
<CustomField>
    <fullName>Special_Machinery_Needed__c</fullName>
    <label>Special Machinery Needed:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>