force-app/main/default/objects/Curb_Job__c/fields/Traffic_Control_Cost_Descr_moblztn_1__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Control_Cost_Descr_moblztn_1__c</fullName>
    <label>Traffic Control Cost&amp;Descr (moblztn #1)</label>
    <type>TextArea</type>
</CustomField>