force-app/main/default/objects/Curb_Job__c/fields/Type_of_Concrete__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Concrete__c</fullName>
    <label>Type of Concrete</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regular 4500 psi</fullName>
                <default>true</default>
                <label>Regular 4500 psi</label>
            </value>
            <value>
                <fullName>NJDOT Class B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>