force-app/main/default/objects/Curb_Job__c/fields/We_backfill_topsoil_seed_hay_etc__c.field-meta.xml
<CustomField>
    <fullName>We_backfill_topsoil_seed_hay_etc__c</fullName>
    <label>We backfill, topsoil ,seed, hay etc?</label>
    <type>TextArea</type>
</CustomField>