force-app/main/default/objects/Curb_Job__c/fields/We_Get_Permits__c.field-meta.xml
<CustomField>
    <fullName>We_Get_Permits__c</fullName>
    <label>We Get Permits?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>