force-app/main/default/objects/Curb_Job__c/fields/We_Pay_for_Stakeout__c.field-meta.xml
<CustomField>
    <fullName>We_Pay_for_Stakeout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>We Pay for Stakeout</label>
    <type>Checkbox</type>
</CustomField>