force-app/main/default/objects/Curb_Job__c/fields/We_Perform_Blacktop_Repair__c.field-meta.xml
<CustomField>
    <fullName>We_Perform_Blacktop_Repair__c</fullName>
    <defaultValue>false</defaultValue>
    <label>We Perform Blacktop Repair</label>
    <type>Checkbox</type>
</CustomField>