force-app/main/default/objects/Curb_Job__c/fields/What_is_Soil_Type__c.field-meta.xml
<CustomField>
    <fullName>What_is_Soil_Type__c</fullName>
    <label>What is Soil Type?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>sand</fullName>
            </value>
            <value>
                <fullName>clay</fullName>
            </value>
            <value>
                <fullName>schale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>