force-app/main/default/objects/Curb_Job__c/fields/What_type_of_curb_and_scale_of_mobilizat__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_curb_and_scale_of_mobilizat__c</fullName>
    <label>Type of curb &amp; scale (moblztn #1)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>face form</fullName>
            </value>
            <value>
                <fullName>face form remove and replace</fullName>
            </value>
            <value>
                <fullName>face form with blacktop repair</fullName>
            </value>
            <value>
                <fullName>face form remove and replace with blacktop repair</fullName>
            </value>
            <value>
                <fullName>full depth</fullName>
            </value>
            <value>
                <fullName>full depth remove and replace</fullName>
            </value>
            <value>
                <fullName>full depth remove and replace with blacktop repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>