force-app/main/default/objects/Curb_Job__c/fields/work_other_than_curb__c.field-meta.xml
<CustomField>
    <fullName>work_other_than_curb__c</fullName>
    <label>Will there be other work other than curb</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asphalt</fullName>
            </value>
            <value>
                <fullName>Ballards</fullName>
            </value>
            <value>
                <fullName>Dumpsters</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Sidewalks</fullName>
            </value>
            <value>
                <fullName>Slabs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>